--- a/css/article/index.css
+++ b/css/article/index.css
@@ -13,3 +13,17 @@
     bottom: 0;
     width: 100%;
 }
+
+@media screen and (max-width: 480px) {
+    .card{
+        height: auto;
+    }
+    .card .card-content{
+        max-height: none;
+        height: auto;
+    }
+    .card .card-action{
+        height: auto;
+        position: initial;
+    }
+}
