a member can now see his rate and his comment

--- a/admin/css/mesRendezVous/member.css
+++ b/admin/css/mesRendezVous/member.css
@@ -1,10 +1,10 @@
-.br-theme-css-stars .br-widget a {
+#rate-modal .br-theme-css-stars .br-widget a {
 	font-size: 70px !important;
     margin-right: 40px !important;
     height: 90px !important;
 }
 
-.br-theme-css-stars .br-widget {
+#rate-modal .br-theme-css-stars .br-widget {
     height: 90px !important;
 }
 
