--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -14,6 +14,16 @@
 }
 
 .collapsible-header{
-	color: #444;
-	font-weight: bold;
+    color: #444;
+    font-weight: bold;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
