--- a/css/index/index.css
+++ b/css/index/index.css
@@ -1,5 +1,5 @@
 .slider .slides{
-    background-color: #455a64;   
+    background-color: <?php echo $_SETTINGS['HEADER_BACKGROUND-COLOR']; ?>;
 }
 .slider .slides li .caption{
     top: 86%;
@@ -44,3 +44,20 @@
 .caption h5 a{
     color: inherit;
 }
+
+/*.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}*/
