--- a/admin/css/mystyle.css
+++ b/admin/css/mystyle.css
@@ -10,3 +10,13 @@
 	color: #444;
 	font-weight: bold;
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
